--- a/main.html
+++ b/main.html
@@ -3,6 +3,17 @@
 <html>
 
 <head>
+	<style>
+		blockquote {
+			display: block;
+			max-width: 600px;
+			margin: 10px; 
+			padding: 15px; 
+			border-left: 8px solid green;
+			background-color: #f8fffe"";
+			font-weight: bold;
+		}
+	</style>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
