--- a/main.html
+++ b/main.html
@@ -21,10 +21,10 @@
 	<!-- the entire body must be written by student -->
 	<div>
 	<h1>What is the capital of india?</h1>
-	<input type="radio" name="city" id="city" value="New Delhi">
-	<label for="">New Delhi</label><br>
-	<input type="radio" name="city" id="city" value="Mumbai">
-	<label for="">Mumbai</label><br>
+	<input type="radio" name="city" id="city" value="New Delhi" required>
+	<label for=" ">New Delhi</label><br>
+	<input type="radio" name="city" id="city" value="Mumbai" required>
+	<label for=" ">Mumbai</label><br>
 	<blockquote cite="https://en.wikipedia.org/wiki/New_Delhi">
 		New Delhi is the capital of India and administrative district of NCT Delhi
 	</blockquote>
