--- a/main.html
+++ b/main.html
@@ -26,7 +26,7 @@
 	<input type="radio" name="city" id="city" value="Mumbai" required>
 	<label for=" ">Mumbai</label><br>
 	<blockquote cite="https://en.wikipedia.org/wiki/New_Delhi">
-		New Delhi is the capital of India and administrative district of NCT Delhi
+		New Delhi is the capital of India and an administrative district of NCT Delhi
 	</blockquote>
 	</div>
     <script type="text/javascript" src="./script.js">
